# suture

./: .clang-format  .gitignore  Doxyfile  README.md  clang.ini  meson.build
docs/: annotated_dup.js  dir_cc3ef4e5cd8e537c85232d87fa499133_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d44c64559bbebec7f509842c48db8b23_dep.dot  doxygen_crawl.html  error_8h__dep__incl.dot  error_8h__incl.dot  error_8h_source.html  flag_8c.html  flag_8c.js  flag_8h.html  flag_8h.js  flag_8h__dep__incl.dot  flag_8h__incl.dot  flag_8h_source.html  globals_enum.html  hook_8c.js  hook_8c_a6c2a11be4ea944d08e8fa2719869a637_icgraph.dot  hook_8h.html  hook_8h.js  hook_8h__dep__incl.dot  hook_8h__incl.dot  index.html  menudata.js  navtreedata.js  navtreeindex0.js  stream_8c.html  stream_8c.js  stream_8c__incl.dot  stream_8c_a42210039601fef25af3c0b33e901b400_icgraph.dot  stream_8c_aacad7121fdd3c8d2a88cccb825fb0e7c_icgraph.dot  stream_8c_af0e13b640a69677501af98db42cb8c3d_icgraph.dot  stream_8h.html  stream_8h.js  stream_8h_a7dca3f4cfb7e703eedf05eb6a06db554_icgraph.dot  stream_8h_af00e7a0335ad4f1dd8decfe4bce8f190_icgraph.dot  structsu__chunk.js  structsu__chunk__coll__graph.dot  structsu__env.html  (+28 more)
docs/html/: annotated.html  classes.html  dir_000000_000002.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_cc3ef4e5cd8e537c85232d87fa499133.html  dir_cc3ef4e5cd8e537c85232d87fa499133.js  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  error_8h.html  error_8h.js  error_8h__dep__incl.dot  error_8h__incl.dot  error_8h_source.html  files.html  flag_8c.html  flag_8c__incl.dot  flag_8c_af996d6d1836f7938f06ed8580b4c739b_icgraph.dot  flag_8h.html  flag_8h__dep__incl.dot  flag_8h__incl.dot  flag_8h_a90f37494b3dfa3377a094276d22d8da1_icgraph.dot  flag_8h_source.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  (+103 more)
examples/: detour.c  trampoline.c
include/: meson.build  suture.h
lib/: flag.c  hook.c  meson.build  stream.c  suture.c  transform.c
src/: disasm.c  flag.c  hook.c  internal.h  stream.c  suture.c  tracker.c  transform.c
(+52 files in other folders)
